platform ios layout bug fix
Attempt two. See https://github.com/fleetdm/fleet/pull/3865 for context.

--- a/website/assets/styles/pages/platform.less
+++ b/website/assets/styles/pages/platform.less
@@ -66,8 +66,9 @@
       text-decoration: none;
     }
     svg {
-      position: fixed;
+      position: absolute;
       left: -50px;
+      top: -35px;
       bottom: 0px;
       overflow: hidden;
       vertical-align: middle;
@@ -338,10 +339,10 @@
         margin-block-end: 16px;
       }
       svg {
-        position: fixed;
-        top: 0px;
+        position: absolute;
+        top: -20px;
         left: 0px;
-        overflow: hidden;
+        overflow: overlay;
         vertical-align: middle;
         z-index: -1;
         width: 100%;
